# parakeet-podcast-processor

./: .gitignore  README.md  pyproject.toml
config/: feeds.yaml  feeds.yaml.example
p3/: cleaner.py  cli.py  database.py  exporter.py  prompts.py  transcriber.py  writer.py
tests/: test_cleaner.py  test_database.py  test_exporter.py  test_transcriber.py  test_writer.py
