[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parakeet-podcast-processor"
version = "0.1.0"
description = "Automated podcast ingestion, transcription, and digest generation"
authors = [{name = "P3 Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0",
    "duckdb>=0.9.0",
    "feedparser>=6.0.0",
    "requests>=2.31.0",
    "openai-whisper>=20231117",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "parakeet-mlx>=0.1.0",
    "ollama>=0.3.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "google-genai>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
p3 = "p3.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["p3*"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
